--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "riddhi suteri",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15"
   }
 }
