hash password and add user login

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "riddhi suteri",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mongoose": "^5.11.15"
   }
